SBRosuPP/bindings/bindings.h

typedef enum hitresultpriority
    {
    HITRESULTPRIORITY_BESTCASE = 0,
    HITRESULTPRIORITY_WORSTCASE = 1,
    } hitresultpriority;
typedef enum mode
    {
    /// osu!standard
    MODE_OSU = 0,
    /// osu!taiko
    MODE_TAIKO = 1,
    /// osu!catch
    MODE_CATCH = 2,
    /// osu!mania
    MODE_MANIA = 3,
    } mode;
typedef struct beatmap beatmap;
typedef struct beatmapattributesbuilder beatmapattributesbuilder;
typedef struct difficulty difficulty;
typedef struct mods mods;
typedef struct modsintermode modsintermode;
typedef struct ownedstring ownedstring;
typedef struct performance performance;
typedef enum ffierror
    {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_PARSEERROR = 300,
    FFIERROR_INVALIDSTRING = 400,
    FFIERROR_SERIALIZEERROR = 500,
    FFIERROR_UNKNOWN = 1000,
    } ffierror;
/// Aggregation for a score's current state.
typedef struct scorestate
    {
    /// Maximum combo that the score has had so far. **Not** the maximum
    /// possible combo of the map so far.
    ///
    /// Note that for osu!catch only fruits and droplets are considered for
    /// combo.
    ///
    /// Irrelevant for osu!mania.
    uint32_t max_combo;
    /// Amount of current gekis (n320 for osu!mania).
    uint32_t n_geki;
    /// Amount of current katus (tiny droplet misses for osu!catch / n200 for
    /// osu!mania).
    uint32_t n_katu;
    /// Amount of current 300s (fruits for osu!catch).
    uint32_t n300;
    /// Amount of current 100s (droplets for osu!catch).
    uint32_t n100;
    /// Amount of current 50s (tiny droplets for osu!catch).
    uint32_t n50;
    /// Amount of current misses (fruits + droplets for osu!catch).
    uint32_t misses;
    } scorestate;
///Option type containing boolean flag and maybe valid data.
typedef struct optionf32
    {
    ///Element that is maybe valid.
    float t;
    ///Byte where `1` means element `t` is valid.
    uint8_t is_some;
    } optionf32;
/// Summary struct for a [`Beatmap`]'s attributes.
typedef struct beatmapattributes
    {
    /// The approach rate.
    double ar;
    /// The overall difficulty.
    double od;
    /// The circle size.
    double cs;
    /// The health drain rate
    double hp;
    /// The clock rate with respect to mods.
    double clock_rate;
    /// The hit windows for approach rate and overall difficulty.
    hitwindows hit_windows;
    } beatmapattributes;
///A pointer to an array of data someone else owns which may not be modified.
typedef struct sliceu8
    {
    ///Pointer to start of immutable data.
    const uint8_t* data;
    ///Number of elements.
    uint64_t len;
    } sliceu8;
typedef struct difficultyattributes
    {
    optionosudifficultyattributes osu;
    optiontaikodifficultyattributes taiko;
    optioncatchdifficultyattributes fruit;
    optionmaniadifficultyattributes mania;
    mode mode;
    } difficultyattributes;
typedef struct performanceattributes
    {
    optionosuperformanceattributes osu;
    optiontaikoperformanceattributes taiko;
    optioncatchperformanceattributes fruit;
    optionmaniaperformanceattributes mania;
    mode mode;
    } performanceattributes;
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror beatmap_attributes_destroy(beatmapattributesbuilder** context);
ffierror beatmap_attributes_new(beatmapattributesbuilder** context);
void beatmap_attributes_mode(beatmapattributesbuilder* context, mode mode);
void beatmap_attributes_p_mods(beatmapattributesbuilder* context, const mods* mods);
void beatmap_attributes_i_mods(beatmapattributesbuilder* context, uint32_t mods);
ffierror beatmap_attributes_s_mods(beatmapattributesbuilder* context, const char* str);
void beatmap_attributes_clock_rate(beatmapattributesbuilder* context, double clock_rate);
void beatmap_attributes_ar(beatmapattributesbuilder* context, float ar);
void beatmap_attributes_cs(beatmapattributesbuilder* context, float cs);
void beatmap_attributes_hp(beatmapattributesbuilder* context, float hp);
void beatmap_attributes_od(beatmapattributesbuilder* context, float od);
double beatmap_attributes_get_clock_rate(beatmapattributesbuilder* context);
beatmapattributes beatmap_attributes_build(const beatmapattributesbuilder* context, const beatmap* beatmap);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror beatmap_destroy(beatmap** context);
ffierror beatmap_from_bytes(beatmap** context, sliceu8 data);
ffierror beatmap_from_path(beatmap** context, const char* path);
/// Convert a Beatmap to the specified mode
bool beatmap_convert(beatmap* context, mode mode);
double beatmap_bpm(beatmap* context);
double beatmap_total_break_time(beatmap* context);
mode beatmap_mode(beatmap* context);
bool beatmap_is_convert(beatmap* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror difficulty_destroy(difficulty** context);
ffierror difficulty_new(difficulty** context);
void difficulty_p_mods(difficulty* context, const mods* mods);
void difficulty_i_mods(difficulty* context, uint32_t mods);
ffierror difficulty_s_mods(difficulty* context, const char* str);
void difficulty_passed_objects(difficulty* context, uint32_t passed_objects);
void difficulty_clock_rate(difficulty* context, double clock_rate);
void difficulty_ar(difficulty* context, float ar);
void difficulty_cs(difficulty* context, float cs);
void difficulty_hp(difficulty* context, float hp);
void difficulty_od(difficulty* context, float od);
void difficulty_hardrock_offsets(difficulty* context, bool hardrock_offsets);
difficultyattributes difficulty_calculate(const difficulty* context, const beatmap* beatmap);
double difficulty_get_clock_rate(difficulty* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror performance_destroy(performance** context);
ffierror performance_new(performance** context);
void performance_mode(performance* context, mode mode);
void performance_p_mods(performance* context, const mods* mods);
void performance_i_mods(performance* context, uint32_t mods);
ffierror performance_s_mods(performance* context, const char* str);
void performance_passed_objects(performance* context, uint32_t passed_objects);
void performance_clock_rate(performance* context, double clock_rate);
void performance_ar(performance* context, float ar);
void performance_cs(performance* context, float cs);
void performance_hp(performance* context, float hp);
void performance_od(performance* context, float od);
void performance_accuracy(performance* context, double accuracy);
void performance_misses(performance* context, uint32_t misses);
void performance_combo(performance* context, uint32_t combo);
void performance_hitresult_priority(performance* context, hitresultpriority hitresult_priority);
void performance_n300(performance* context, uint32_t n300);
void performance_n100(performance* context, uint32_t n100);
void performance_n50(performance* context, uint32_t n50);
void performance_n_katu(performance* context, uint32_t n_katu);
void performance_n_geki(performance* context, uint32_t n_geki);
scorestate performance_generate_state(const performance* context, const beatmap* beatmap);
performanceattributes performance_calculate(const performance* context, const beatmap* beatmap);
performanceattributes performance_calculate_from_difficulty(const performance* context, difficultyattributes difficulty_attr);
double performance_get_clock_rate(performance* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror string_destroy(ownedstring** context);
ffierror string_from_c_str(ownedstring** context, const char* str);
ffierror string_empty(ownedstring** context);
bool string_is_init(const ownedstring* context);
const char* string_to_cstr(const ownedstring* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror mods_destroy(mods** context);
ffierror mods_new(mods** context, mode mode);
ffierror mods_from_acronyms(mods** context, const char* str, mode mode);
ffierror mods_from_bits(mods** context, uint32_t bits, mode mode);
ffierror mods_from_json(mods** context, const char* str, mode mode);
uint32_t mods_bits(mods* context);
uint32_t mods_len(mods* context);
void mods_json(mods* context, ownedstring* str);
bool mods_insert_json(mods* context, const char* str);
bool mods_insert(mods* context, const char* str);
bool mods_contains(mods* context, const char* str);
void mods_clear(mods* context);
optionf32 mods_clock_rate(mods* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror mods_intermode_destroy(modsintermode** context);
ffierror mods_intermode_from_acronyms(modsintermode** context, const char* str);
ffierror mods_intermode_from_bits(modsintermode** context, uint32_t bits);
uint32_t mods_intermode_bits(modsintermode* context);
uint32_t mods_intermode_len(modsintermode* context);
bool mods_intermode_contains(modsintermode* context, const char* str);
bool mods_intermode_intersects(modsintermode* context, const char* str);
float mods_intermode_legacy_clock_rate(modsintermode* context);
void debug_difficylty_attributes(const difficultyattributes* res, ownedstring* str);
void debug_performance_attributes(const performanceattributes* res, ownedstring* str);
void debug_score_state(const scorestate* res, ownedstring* str);