bindings/RosuFFI.h

/// Type to pass [`OsuScoreState::accuracy`] and specify the origin of a score.
typedef enum osuscoreorigin
    {
    /// For scores set on osu!stable
    OSUSCOREORIGIN_STABLE = 0,
    /// For scores set on osu!lazer with slider accuracy
    OSUSCOREORIGIN_WITHSLIDERACC = 1,
    /// For scores set on osu!lazer without slider accuracy
    OSUSCOREORIGIN_WITHOUTSLIDERACC = 2,
    } osuscoreorigin;
typedef struct beatmap beatmap;
typedef struct difficulty difficulty;
typedef struct mods mods;
typedef struct performance performance;
void difficulty_lazer(difficulty* context, bool lazer);
void performance_hardrock_offsets(performance* context, bool hardrock_offsets);
void performance_lazer(performance* context, bool lazer);
void performance_slider_end_hits(performance* context, uint32_t slider_end_hits);
double calculate_accuacy(const scorestate* state, const difficultyattributes* difficulty, osuscoreorigin origin);