RosuPP/bindings/RosuFFI.java

import java.lang.ref.Cleaner;
import java.util.Optional;

import com.sun.jna.Memory;
import com.sun.jna.Native;
import com.sun.jna.Pointer;
import com.sun.jna.Structure;
import com.sun.jna.ptr.PointerByReference;

public class RosuFFI {
    
    public interface HitResultPriority {
        int BestCase = 0;
        int WorstCase = 1;
    }

    public interface ModeInt {
        /// osu!standard
        int Osu = 0;
        /// osu!taiko
        int Taiko = 1;
        /// osu!catch
        int Catch = 2;
        /// osu!mania
        int Mania = 3;
    }

    public interface FFIError {
        int Ok = 0;
        int Null = 100;
        int Panic = 200;
        int ParseError = 300;
        int InvalidString = 400;
        int SerializeError = 500;
        int Unknown = 1000;
    }

    public class RosuPPLib {

        // JNA 为 dll 名称
        // RosuPPLib INSTANCE = Native.load("rosu_pp_ffi", RosuPPLib.class);
    
        static {
            Native.register("rosu_pp_ffi");
        }

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int beatmap_attributes_destroy(PointerByReference context);

        public static native int beatmap_attributes_new(PointerByReference context);

        public static native void beatmap_attributes_mode(Pointer context, int mode);

        public static native void beatmap_attributes_p_mods(Pointer context, Pointer mods);

        public static native void beatmap_attributes_i_mods(Pointer context, long mods);

        public static native int beatmap_attributes_s_mods(Pointer context, String str);

        public static native void beatmap_attributes_clock_rate(Pointer context, double clock_rate);

        public static native void beatmap_attributes_ar(Pointer context, float ar);

        public static native void beatmap_attributes_cs(Pointer context, float cs);

        public static native void beatmap_attributes_hp(Pointer context, float hp);

        public static native void beatmap_attributes_od(Pointer context, float od);

        public static native double beatmap_attributes_get_clock_rate(Pointer context);

        public static native BeatmapAttributes.ByValue beatmap_attributes_build(Pointer context, Pointer beatmap);

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int beatmap_destroy(PointerByReference context);

        public static native int beatmap_from_bytes(PointerByReference context, Sliceu8 data);

        public static native int beatmap_from_path(PointerByReference context, String path);

        /// Convert a Beatmap to the specified mode
        public static native boolean beatmap_convert(Pointer context, int mode);

        public static native double beatmap_bpm(Pointer context);

        public static native double beatmap_total_break_time(Pointer context);

        public static native int beatmap_mode(Pointer context);

        public static native boolean beatmap_is_convert(Pointer context);

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int difficulty_destroy(PointerByReference context);

        public static native int difficulty_new(PointerByReference context);

        public static native void difficulty_p_mods(Pointer context, Pointer mods);

        public static native void difficulty_i_mods(Pointer context, long mods);

        public static native int difficulty_s_mods(Pointer context, String str);

        public static native void difficulty_passed_objects(Pointer context, long passed_objects);

        public static native void difficulty_clock_rate(Pointer context, double clock_rate);

        public static native void difficulty_ar(Pointer context, float ar);

        public static native void difficulty_cs(Pointer context, float cs);

        public static native void difficulty_hp(Pointer context, float hp);

        public static native void difficulty_od(Pointer context, float od);

        public static native void difficulty_hardrock_offsets(Pointer context, boolean hardrock_offsets);

        public static native void difficulty_lazer(Pointer context, boolean lazer);

        public static native DifficultyAttributes.ByValue difficulty_calculate(Pointer context, Pointer beatmap);

        public static native double difficulty_get_clock_rate(Pointer context);

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int performance_destroy(PointerByReference context);

        public static native int performance_new(PointerByReference context);

        public static native void performance_mode(Pointer context, int mode);

        public static native void performance_p_mods(Pointer context, Pointer mods);

        public static native void performance_i_mods(Pointer context, long mods);

        public static native int performance_s_mods(Pointer context, String str);

        public static native void performance_passed_objects(Pointer context, long passed_objects);

        public static native void performance_clock_rate(Pointer context, double clock_rate);

        public static native void performance_ar(Pointer context, float ar);

        public static native void performance_cs(Pointer context, float cs);

        public static native void performance_hp(Pointer context, float hp);

        public static native void performance_od(Pointer context, float od);

        public static native void performance_hardrock_offsets(Pointer context, boolean hardrock_offsets);

        public static native void performance_accuracy(Pointer context, double accuracy);

        public static native void performance_misses(Pointer context, long misses);

        public static native void performance_combo(Pointer context, long combo);

        public static native void performance_hitresult_priority(Pointer context, int hitresult_priority);

        public static native void performance_lazer(Pointer context, boolean lazer);

        public static native void performance_slider_tick_hits(Pointer context, long slider_tick_hits);

        public static native void performance_slider_tick_misses(Pointer context, long slider_tick_misses);

        public static native void performance_slider_end_hits(Pointer context, long slider_end_hits);

        public static native void performance_n300(Pointer context, long n300);

        public static native void performance_n100(Pointer context, long n100);

        public static native void performance_n50(Pointer context, long n50);

        public static native void performance_n_katu(Pointer context, long n_katu);

        public static native void performance_n_geki(Pointer context, long n_geki);

        public static native ScoreState.ByValue performance_generate_state(Pointer context, Pointer beatmap);

        public static native PerformanceAttributes.ByValue performance_calculate(Pointer context, Pointer beatmap);

        public static native PerformanceAttributes.ByValue performance_calculate_from_difficulty(Pointer context, DifficultyAttributes.ByValue difficulty_attr);

        public static native double performance_get_clock_rate(Pointer context);

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int string_destroy(PointerByReference context);

        public static native int string_from_c_str(PointerByReference context, String str);

        public static native int string_empty(PointerByReference context);

        public static native boolean string_is_init(Pointer context);

        public static native String string_to_cstr(Pointer context);

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int mods_destroy(PointerByReference context);

        public static native int mods_new(PointerByReference context, int mode);

        public static native int mods_from_acronyms(PointerByReference context, String str, int mode);

        public static native int mods_from_bits(PointerByReference context, long bits, int mode);

        public static native int mods_from_json(PointerByReference context, String str, int mode);

        public static native int mods_from_json_sanitize(PointerByReference context, String str, int mode);

        public static native void mods_remove_incompatible_mods(Pointer context);

        public static native long mods_bits(Pointer context);

        public static native long mods_len(Pointer context);

        public static native void mods_json(Pointer context, Pointer str);

        public static native boolean mods_insert_json(Pointer context, String str);

        public static native boolean mods_insert(Pointer context, String str);

        public static native boolean mods_contains(Pointer context, String str);

        public static native void mods_clear(Pointer context);

        public static native Optionf64 mods_clock_rate(Pointer context);

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        public static native int mods_intermode_destroy(PointerByReference context);

        public static native int mods_intermode_from_acronyms(PointerByReference context, String str);

        public static native int mods_intermode_from_bits(PointerByReference context, long bits);

        public static native long mods_intermode_bits(Pointer context);

        public static native long mods_intermode_len(Pointer context);

        public static native boolean mods_intermode_contains(Pointer context, String str);

        public static native boolean mods_intermode_intersects(Pointer context, String str);

        public static native double mods_intermode_legacy_clock_rate(Pointer context);

        public static native void debug_difficylty_attributes(DifficultyAttributes res, Pointer str);

        public static native void debug_performance_attributes(PerformanceAttributes res, Pointer str);

        public static native void debug_score_state(ScoreState res, Pointer str);

        public static native double calculate_accuacy(ScoreState state, DifficultyAttributes difficulty);

        @Structure.FieldOrder({"data", "len"})
        public static class Sliceu8 extends Structure {
            public Pointer data;
            public long len;

            public Sliceu8(byte[] data) {
                this.data = new Memory(data.length);
                this.data.write(0, data, 0, data.length);
                this.len = data.length;
            }

            public Sliceu8() {}
